syntax = "proto3";

package bank;

service BankService {
  rpc ModifyBalance(ModifyBalanceRequest) returns (ModifyBalanceResponse);
  rpc CheckSufficientFund(CheckSufficientFundRequest) returns (CheckSufficientFundResponse);
}

message ModifyBalanceRequest {
  int64 buyer_id = 1;
  int64 seller_id = 2;
  double amount = 3;
}

message ModifyBalanceResponse {
  bool success = 1;
  string message = 2;
}
// Define request message
message CheckSufficientFundRequest {
  int64 customer_id = 1;  // Customer ID
  double price = 2;       // Price to check
}

// Define response message
message CheckSufficientFundResponse {
  bool is_sufficient = 1; // True if sufficient funds, false otherwise
}
